@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2018-07-11
+ * wing.vue.js throws errors when apis are empty.
+
 2018-07-06
  * wing.object.save() in wing.vue.js now has a 200ms delay to give vue a chance to update the property.
  * wing.throbber only animates for 200ms instead of 500ms.
